# SylaneCpn.github.io

./: Cargo.toml  Dioxus.toml  README.md  aboutfr.html  build.sh  cv.html  ecole.html  index.html  projets.html  pubspec.yaml
assets/css/: box.css  contacts.css  main.css  md.css  navbar.css  prism.css
css/: about.css  common.css  ecole.css  index.css  projets.css
docs/: .build.manifest  404.html  index.html  main.dart.js
docs/assets/: box-dxh6f88593dd5bc0e4.css  contacts-dxh8a56eb69c8515b4.css  favicon.ico.br  logo-cfdd6ed10dec616d.png.br  main-e0d7c638331e83b0.css.br  md-162250f96f2ceeac.css  md-dxhd0fb74669acc2e13.css  navbar-dxh85e6a7e12db5b233.css  prism-5b4b5890f228e277.js.br  sylane-website-574ca804940bc7ed.js.br  sylane-website-be506c0027d05efc.js  sylane-website-be506c0027d05efc.js.br  sylane-website-dxh1bdf61cd5e7f833.js  sylane-website_bg-0c843f0fc52885c1.wasm  sylane-website_bg-0c843f0fc52885c1.wasm.br  sylane-website_bg-11b5e5b90c5d44ab.wasm.br  sylane-website_bg-4354f15ccab5f83f.wasm.br  sylane-website_bg-784111699e157b38.wasm  sylane-website_bg-dxh8e9d747e91c74dae.wasm  sylane-website_bg-e01c6129c1a058d1.wasm  sylane-website_bg-e01c6129c1a058d1.wasm.br  sylane-website_bg-ebb6ebfc71ced8d2.wasm.br  sylane-website_bg-f6904b39fe85ef30.wasm  sylane-website_bg-f6904b39fe85ef30.wasm.br
js/: dyna.js
lib/: app.dart  component.dart  prism.dart  route.dart  router.dart
md/: about_fr.md  blog_fr.md  home_fr.md  projects_fr.md  resume_fr.md  school_fr.md
src/: boxs.rs  contacts.rs  main.rs  md.rs  navbar.rs  pages.rs
web/: 404.html  index.html  main.dart
(+97 files in other folders)
