[package]
name = "sylane-website"
version = "0.1.0"
authors = ["sylane"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
pulldown-cmark = "0.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["web"]
web = ["dioxus/web"]

